--- a/client/opticopterClient/build.properties
+++ b/client/opticopterClient/build.properties
@@ -9,4 +9,5 @@ bin.includes = plugin.xml,\
                lib/joda-time-2.3.jar,\
                lib/org.csstudio.swt.widgets_2.1.0.201209121549.jar,\
                lib/org.csstudio.swt.xygraph_2.1.0.201209121540.jar,\
-               lib/commons-collections4-4.0-alpha1.jar
+               lib/commons-collections4-4.0-alpha1.jar,\
+               lib/jFuzzyLogic.jar
