--- a/opticopterAndroid/OpticopterAndroid/project.properties
+++ b/opticopterAndroid/OpticopterAndroid/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../opencv/OpenCV-2.4.7.1-android-sdk/sdk/java
+android.library.reference.1=../../../../workspace/opencv/OpenCV-2.4.7.1-android-sdk/sdk/java
