--- a/OpticopterPhoneDrone/OpticopterPhoneDrone/.settings/org.eclipse.cdt.core.prefs
+++ b/OpticopterPhoneDrone/OpticopterPhoneDrone/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,21 @@
 eclipse.preferences.version=1
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/ARDUINO/delimiter=\:
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/ARDUINO/operation=append
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/ARDUINO/value=103
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/PATH/delimiter=\:
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/PATH/operation=replace
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/PATH/value=/usr/local/bin\:/usr/bin\:/usr/lib/lightdm/lightdm\:/usr/local/sbin\:/usr/sbin\:/sbin\:/bin\:/usr/games\:/usr/local/games
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/__AVR_ATmega2560__/delimiter=\:
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/__AVR_ATmega2560__/operation=append
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/__AVR_ATmega2560__/value=
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/append=true
+environment/project/de.innot.avreclipse.configuration.app.debug.1346282905/appendContributed=true
+environment/project/de.innot.avreclipse.configuration.app.release.1250379719/ARDUINO/delimiter=\:
+environment/project/de.innot.avreclipse.configuration.app.release.1250379719/ARDUINO/operation=append
+environment/project/de.innot.avreclipse.configuration.app.release.1250379719/ARDUINO/value=103
+environment/project/de.innot.avreclipse.configuration.app.release.1250379719/__AVR_ATmega2560__/delimiter=\:
+environment/project/de.innot.avreclipse.configuration.app.release.1250379719/__AVR_ATmega2560__/operation=append
+environment/project/de.innot.avreclipse.configuration.app.release.1250379719/__AVR_ATmega2560__/value=
 environment/project/de.innot.avreclipse.configuration.app.release.1250379719/append=true
 environment/project/de.innot.avreclipse.configuration.app.release.1250379719/appendContributed=true
 org.eclipse.cdt.core.formatter.alignment_for_arguments_in_method_invocation=16
