--- a/peripherie/.settings/org.eclipse.cdt.core.prefs
+++ b/peripherie/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
+environment/project/de.innot.avreclipse.configuration.app.release.182746993/PATH/delimiter=\:
+environment/project/de.innot.avreclipse.configuration.app.release.182746993/PATH/operation=replace
+environment/project/de.innot.avreclipse.configuration.app.release.182746993/PATH/value=/usr/local/bin\:/usr/bin\:/usr/lib/lightdm/lightdm\:/usr/local/sbin\:/usr/sbin\:/sbin\:/bin\:/usr/games\:/usr/local/games
+environment/project/de.innot.avreclipse.configuration.app.release.182746993/append=true
+environment/project/de.innot.avreclipse.configuration.app.release.182746993/appendContributed=true
 org.eclipse.cdt.core.formatter.alignment_for_arguments_in_method_invocation=16
 org.eclipse.cdt.core.formatter.alignment_for_assignment=16
 org.eclipse.cdt.core.formatter.alignment_for_base_clause_in_type_declaration=80
